# utf_range

./: CMakeLists.txt  LICENSE  daw_char_range.cpp  daw_char_range.h  glean.cmake  glean.json
.github/workflows/: ci_macos.yml  ci_ubuntu.yml  ci_windows.yml  ci_windows_clangcl.yml
ci_scripts/: ci_macos_test.sh  ci_ubuntu_test.sh  ci_windows_build.cmd  ci_windows_build_clangcl.cmd  ci_windows_test.cmd
cmake/: daw-utf-rangeConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
dependent_projects/: CMakeLists.txt  CMakeListsCompiler.txt  dependencies.txt
include/: daw_char_range.h
include/daw/char_range/: daw_char_range.h  daw_utf_string.h
include/daw/utf8/: checked.h  core.h  unchecked.h
include/daw/utf_range/: daw_utf_range.h  daw_utf_string.h
include/utf8/: checked.h
src/: daw_char_range.cpp  daw_utf_range.cpp  daw_utf_string.cpp
tests/: CMakeLists.txt  daw_char_range_test.cpp  daw_utf_range_test.cpp  daw_utf_string_test.cpp
